# WebLibrary

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  Api.cpp  Api.hpp  CMakeLists.txt  DEV.md  Dockerfile  Endpoint.hpp  LICENSE  README.md  arch.docx  main.cpp
cmake/: weblibConfig.cmake.in
examples/: CustomController.hpp  CustomFilter.hpp  CustomFilter2.hpp
include/: debug.hpp
include/requests/: client.hpp  response.hpp
include/server/: Cookie.hpp  CustomController.hpp  CustomFilter.hpp  CustomFilter2.hpp  Endpoint.hpp  HeaderView.hpp  HttpBinder.hpp  HttpController.hpp  HttpFilter.hpp  HttpFramework.hpp  HttpHandle.hpp  HttpRequest.hpp  HttpResController.hpp  HttpResponse.hpp  HttpRouter.hpp  HttpServer.hpp  Query.hpp  RequestType.hpp  ThreadPool.hpp  Utils.hpp  hash.hpp  types.hpp
include/weblib/: consts.hpp  debug.hpp  exceptions.hpp  utils.hpp
include/weblib/requests/: client.hpp  request.hpp  response.hpp
include/weblib/server/: Cookie.hpp  HeaderView.hpp  HttpBinder.hpp  HttpController.hpp  HttpFilter.hpp  HttpFramework.hpp  HttpHandle.hpp  HttpHeaders.hpp  HttpQuery.hpp  HttpRequest.hpp  HttpResponse.hpp  HttpRouter.hpp  HttpServer.hpp  Query.hpp  RequestType.hpp  ThreadPool.hpp  Utils.hpp  consts.hpp  funcs.hpp  hash.hpp  types.hpp
lib/: libjsoncpp.so.27
requests/: client.cpp  request.cpp  response.cpp
server/: Cookie.cpp  HttpHandle.cpp  HttpHeaders.cpp  HttpQuery.cpp  HttpRequest.cpp  HttpResController.cpp  HttpResponse.cpp  HttpRouter.cpp  HttpServer.cpp  ThreadPool.cpp  Utils.cpp  utils.cpp
tests/: cookie_test.cpp  httprequest_test.cpp  utils_test.cpp
